# renderers-xml

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.py
nagare/renderers/: xml.py
src/nagare/renderers/: xml.py
tests/: helloworld.csv  test_global.py  test_meld.py  test_parse.py  test_tree.py
