# =-
# (C)opyright Net-ng 2023
#
# This is Net-ng proprietary source code
# Any reproduction modification or use without prior written
# approval from Net-ng is strictly forbidden.
# =-

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
name = 'nagare-renderers-xml'
dynamic = ['version']
description = 'Nagare XML renderer'
authors = [
    {name = 'Net-ng'},
    {email = 'contact@net-ng.com'}
]
license = {file = 'LICENSE.txt'}
requires-python = '>=3.7'
dependencies = [
    """lxml \
     @ https://files.pythonhosted.org/packages/06/5a/e11cad7b79f2cf3dd2ff8f81fa8ca667e7591d3d8451768589996b65dec1/lxml-4.9.2.tar.gz \
     ; platform_system!='Windows' and python_full_version=='3.8.1'""",
    "lxml ; platform_system=='Windows' or python_full_version!='3.8.1'"
]

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'pre-commit',
    'black',
    'ruff',
    'pytest',
    'build',
    'twine'
]

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/renderers-xml'
Tracker = 'https://github.com/nagareproject/renderers-xml/issues'

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true

[tool.ruff]
select = ['C4', 'COM', 'D', 'E', 'ERA', 'F', 'I', 'ISC', 'INP', 'PIE', 'Q', 'S', 'SIM', 'TID', 'W', 'YTT']
ignore = ['COM812', 'D10', 'D401']
line-length = 120
src = ['src']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.isort]
known-third-party = ['nagare']
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ['tests']
